# tech-challenge-lgpd

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code-coverage.yml  code-quality.yml  deploy.yml
database/: 01_create_table.sql
k8s/: configmap.yaml  lgpd-deployment.yaml  lgpd-svc.yaml
source/: main.py
source/adapters/: api_adapter.py  postgresql_adapter.py
source/entities/: solicitante.py
source/gateways/: solicitacao_exclusao_gateway.py
source/use_cases/: exclusao_dados_pessoais_use_case.py
tests/: conftest.py  test_adapters.py  test_gateways.py  test_use_cases.py
